--- a/code/less/variables-bamboo-light.less
+++ b/code/less/variables-bamboo-light.less
@@ -25,7 +25,8 @@
 // --------------------------------------------------
 @headerTitleBackground: #70E197;
 
-// Breadcrumbs
+// Content Background
+@content-background: #6FE18F;
 // 
 
 @activeTextColor: #777;
